# jupyterlab-kernelspy

./: .copier-answers.yml  .eslintrc.js  .gitignore  .prettierignore  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build.yml  check-release.yml  publish.yml
binder/: environment.yml  postBuild
jupyterlab-kernelspy/: __init__.py
jupyterlab_kernelspy/: __init__.py  _version.py
src/: index.ts  model.ts  plugin.ts  threadnav.tsx  typings.d.ts  widget.tsx  wip.d.ts
style/: base.css  index.css
typings/react-inspector/: react-inspector.d.ts
