[metadata]
description-file = README.md
license_file = LICENSE

[manifix]
known-excludes =
    .git*
    .git/**/*
    lerna-debug.log
    **/node_modules/**/*
    **/__py_cache__/**/*
    **/*.pyc
    jupyterlab-kernelspy/*
    screenshot.png
    tsconfig.tsbuildinfo
    lib/**/*
    **/.ipynb_checkpoints/**/*
